# api.yml
@@ -370,6 +370,20 @@ paths:
         '201':
           $ref: '#/components/responses/postUser'
 
+  /user/signIn:
+    post:
+      description: Sign in a user
+      operationId: SignInUser
+      tags:
+        - User
+      requestBody:
+        $ref: '#/components/requestBodies/signInUser'
+      responses:
+        '200':
+          $ref: '#/components/responses/postUser'
+        '404':
+          $ref: '#/components/responses/NotFound'
+
   /user/{id}:
 
     parameters:
@@ -609,6 +623,18 @@ components:
           type: string
 
 
+    SignInDto:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+
+
     OrderDto:
       type: object
       required:
@@ -778,6 +804,14 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/UserDto'
+
+    signInUser:
+      description: Body for creating User
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/SignInDto'
             
             
     getOrder:
