# src/app/api/models/sign-in-dto.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface SignInDto {
+  email: string;
+  password: string;
+}
